--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fontsource/inter": "4.5.14",
     "@fontsource/roboto": "4.5.8",
     "@khanacademy/simple-markdown": "0.8.6",
+    "@lzy1960/google-translate": "0.2.6",
     "@matrix-org/olm": "3.2.14",
     "@tippyjs/react": "4.2.6",
     "blurhash": "2.0.4",
@@ -31,6 +32,7 @@
     "file-saver": "2.0.5",
     "flux": "4.0.3",
     "formik": "2.2.9",
+    "google-translate-api-browser": "3.0.0",
     "html-react-parser": "3.0.4",
     "katex": "0.16.4",
     "linkify-html": "4.0.2",
