--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "formik": "2.2.9",
     "google-translate-api-browser": "3.0.0",
     "html-react-parser": "3.0.4",
+    "i18next": "22.4.9",
+    "i18next-browser-languagedetector": "7.0.1",
+    "i18next-http-backend": "2.1.1",
     "katex": "0.16.4",
     "linkify-html": "4.0.2",
     "linkifyjs": "4.0.2",
@@ -46,6 +49,7 @@
     "react-dnd-html5-backend": "15.1.3",
     "react-dom": "17.0.2",
     "react-google-recaptcha": "2.1.0",
+    "react-i18next": "12.1.5",
     "react-modal": "3.16.1",
     "sanitize-html": "2.8.0",
     "tippy.js": "6.3.7",
