--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cinny",
-  "version": "2.2.4",
+  "version": "2.2.6",
   "description": "Yet another matrix client",
   "main": "index.js",
   "engines": {
@@ -19,6 +19,8 @@
   "author": "Ajay Bura",
   "license": "MIT",
   "dependencies": {
+    "@capacitor/android": "4.7.1",
+    "@capacitor/core": "4.7.1",
     "@fontsource/inter": "4.5.14",
     "@fontsource/roboto": "4.5.8",
     "@khanacademy/simple-markdown": "0.8.6",
@@ -40,7 +42,7 @@
     "katex": "0.16.4",
     "linkify-html": "4.0.2",
     "linkifyjs": "4.0.2",
-    "matrix-js-sdk": "22.0.0",
+    "matrix-js-sdk": "24.0.0",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-autosize-textarea": "7.1.0",
@@ -56,6 +58,8 @@
     "twemoji": "14.0.2"
   },
   "devDependencies": {
+    "@capacitor/assets": "2.0.4",
+    "@capacitor/cli": "4.7.1",
     "@esbuild-plugins/node-globals-polyfill": "0.2.3",
     "@rollup/plugin-inject": "5.0.3",
     "@rollup/plugin-wasm": "6.1.1",
