--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,9 +6,9 @@ body:
     attributes:
       value: |
         ## First of all
-        1. Please search for [existing issues](https://github.com/ajbura/cinny/issues?q=is%3Aissue) about this problem first.
-        2. Make sure Cinny is up to date.
-        3. Make sure it's an issue with Cinny and not something else you are using.
+        1. Please search for [existing issues](https://github.com/NotAlexNoyle/Versi/issues?q=is%3Aissue) about the problem first.
+        2. Make sure Versi is up to date.
+        3. Make sure it's an issue with Versi and not something else you are using.
         4. Remember to be friendly.
 
   - type: textarea
@@ -40,12 +40,12 @@ body:
     id: info
     attributes:
       label: Platform and versions
-      description: "Provide OS, browser and Cinny version with your Homeserver."
+      description: "Provide OS, browser and Versi version with your Homeserver."
       placeholder: |
-       1. OS: [e.g. Windows 10, MacOS]
-       2. Browser: [e.g. chrome 99.5, firefox 97.2]
-       3. Cinny version: [e.g. 1.8.1 (app.cinny.in)]
-       4. Matrix homeserver: [e.g. matrix.org]
+       1. OS: [e.g. Binbows 10, MacOS]
+       2. Browser: [e.g. pale moon 33, waterfox 105]
+       3. Versi version: [e.g. 1.8.1]
+       4. Matrix homeserver: [e.g. chat.true-og.net]
       render: shell
     validations:
       required: true
